[gd_scene load_steps=3 format=3 uid="uid://d4il5lhwbt66h"]

[ext_resource type="Script" path="res://Scripts/Helpers/level_transition.gd" id="1_lfcc8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_emnap"]
size = Vector2(32, 128)

[node name="LevelTransition" type="Node2D"]
script = ExtResource("1_lfcc8")

[node name="Area2D" type="Area2D" parent="." groups=["LevelTransition"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(16, 64)
shape = SubResource("RectangleShape2D_emnap")
debug_color = Color(0.3, 0.323333, 1, 0.847059)

[node name="TransitionDelay" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="TransitionDelay" to="." method="_on_transition_delay_timeout"]
